Approval page ui fixed

--- a/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
@@ -205,7 +205,6 @@
                                                         <span id="showTotalValue"></span>
                                                     </td>
                                                 }
-
                                             </tr>
                                         </tfoot>
                                     </table>
@@ -217,7 +216,7 @@
                                     </h4>
 
                                     <table class="table table-bordered table-striped table-responsive">
-                                        <tr class="bg-gray text-center">
+                                        <tr class="bg-gray">
                                             @foreach (var item in Model.ApprovalModelList)
                                             {
                                                 <th style="padding:5px;text-align:center;">
